reference/tests/snapshots/snapshot__run_reference_examples@functions-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/functions-2.prql
---
SELECT
  students.*,
  sat_score - 0 / 1600 - 0 AS sat_proportion_1,
  sat_score - 0 / 1600 - 0 AS sat_proportion_2
FROM
  students
