reference/tests/snapshots/snapshot__run_reference_examples@functions-3.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/functions-3.prql
---
SELECT
  cities.*,
  temp_f - 32 * 3 AS temp_c
FROM
  cities
