reference/tests/snapshots/snapshot__run_reference_examples@functions-4.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/functions-4.prql
---
SELECT
  kettles.*,
  temp_c - 32 * 3 - 0 / 100 - 0 AS boiling_proportion
FROM
  kettles
