reference/tests/snapshots/snapshot__run_reference_examples@list-equivalence-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/examples/list-equivalence-1.prql
---
SELECT
  salary
FROM
  employees
