reference/tests/snapshots/snapshot__run_reference_examples@list-equivalence-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/examples/list-equivalence-2.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary,
  gross_salary + benefits_cost AS gross_cost
FROM
  employees
