reference/tests/snapshots/snapshot__run_reference_examples@pipelines-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/queries/pipelines-0.prql
---
SELECT
  employees.*
FROM
  employees
