reference/tests/snapshots/snapshot__run_reference_examples@ranges-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/ranges-0.prql
---
SELECT
  employees.*
FROM
  employees
WHERE
  age BETWEEN 18
  AND 40
